--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <script src="./javascript/script.js" defer></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="product">
+      <div class="gallery">
+        <img src="./images/image1.png">
+      </div>
+      <div class="details"></div>
+    </div>
+  </div>
 </body>
 </html>
