--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
       <div class="gallery">
         <img src="./images/image1.png">
       </div>
-      <div class="details"></div>
+      <div class="details">
+        <h1>Casual T-shirt</h1>
+        <h2>$15.00</h2>
+        <h3>30% OFF</h3>
+        <p>Wrangler is an American manufacturer of jeans and other clothing items,
+          particularly workwear.</p>
+      </div>
     </div>
   </div>
 </body>
