--- a/index.html
+++ b/index.html
@@ -19,6 +19,31 @@
         <h3>30% OFF</h3>
         <p>Wrangler is an American manufacturer of jeans and other clothing items,
           particularly workwear.</p>
+        <form>
+          <div class="size-select">
+            <p>Size</p>
+            <label for="small">
+              <input type="radio" name="size" id="small">
+              <span>S</span>
+            </label>
+            <label for="medium">
+              <input type="radio" name="size" id="medium">
+              <span>M</span>
+            </label>
+            <label for="large">
+              <input type="radio" name="size" id="large">
+              <span>L</span>
+            </label>
+            <label for="x-large">
+              <input type="radio" name="size" id="x-large">
+              <span>XL</span>
+            </label>
+            <label for="xx-large">
+              <input type="radio" name="size" id="xx-large">
+              <span>XXL</span>
+            </label>
+          </div>
+        </form>
       </div>
     </div>
   </div>
