build: create the controls for the image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <div class="product">
       <div class="gallery">
         <img src="./images/image1.png">
+        <div class="controls">
+          <span class="btn"></span>
+          <span class="btn"></span>
+          <span class="btn"></span>
+        </div>
       </div>
       <div class="details">
         <h1>Casual T-shirt</h1>
