build: add class

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="gallery">
         <img src="./images/image1.png">
         <div class="controls">
-          <span class="btn"></span>
+          <span class="btn active"></span>
           <span class="btn"></span>
           <span class="btn"></span>
         </div>
